syntax = "proto3";

package blockjoy.api.v1;

import "node.proto";
import "host.proto";
import "messages.proto";
import "google/protobuf/empty.proto";

message Command {
  oneof type {
    NodeCommand node = 1;
    HostCommand host = 2;
  }
}

message CommandInfo {
  string id = 1;
  optional string response = 2;
  optional int32 exit_code = 3;
}

message CommandResponse {
  repeated CommandInfo commands = 1;
}

message PendingCommandsRequest {
  string host_id = 1;
  /* maybe use it for getting only specific type of pending commands? */
  optional string filter_type = 2;
}

/* Commands service used in favour of deprecated command flow */
service Commands {
  /* Update a single command status */
  rpc Update(CommandInfo) returns (google.protobuf.Empty);
  /* Get pending commands for host */
  rpc Pending(PendingCommandsRequest) returns (CommandResponse);
}
